syntax = "proto3";

option go_package = "common/message";

package message;

import "google/api/annotations.proto";

service MessageService{

    
        rpc GetAllById(GetAllByIdRequest) returns(GetAllByIdResponse) {
        	option (google.api.http) = {
			get: "/messages/{id}"
		};
        }

        rpc CreateMessage(CreateMessageRequest) returns(CreateMessageResponse) {
                option (google.api.http) = {
                        post: "/message"
                        body: "createdMessage"
                };

        }

        rpc ChangeMessageStatus(ChangeMessageStatusRequest) returns(CreateMessageResponse) {
                option (google.api.http) = {
                        put: "/messageStatus"
                        body: "*"
                };

        }

        
}

message ChangeMessageStatusRequest {
    string status = 1;
    string id = 2;
}

message GetAllByIdRequest {
    string id = 1;
}

message GetAllByIdResponse{
    repeated Message messages = 1;

}

message Message {
    string id = 1;
    string text = 2;
    string sender = 3;
    string receiver = 4;
    string time = 5;
    string status = 6;
}

message CreateMessageRequest {
        CreateMessage createdMessage = 1;
}

message CreateMessageResponse {
        string id = 1;
}

message CreateMessage {
    string text = 1;
    string sender = 2;
    string receiver = 3;
    string time = 4;
    string status = 5;
        
}


